# surun

./: .clang-format  .clangd  .firebaserc  .gitignore  CMakeLists.txt  CMakePresets.json  CmdLine.h  DBGTrace.H  DBGTrace.cpp  DynWTSAPI.cpp  DynWTSAPI.h  GNUMakefile  Helpers.cpp  Helpers.h  IsAdmin.cpp  IsAdmin.h  LSALogon.cpp  LSALogon.h  LogonDlg.cpp  LogonDlg.h  Makefile  README.md  ReadMe.txt  ReqAdmin.cpp  ReqAdmin.h  ResStr.h  ScreenSnap.h  Service.cpp  Service.h  Setup.cpp  Setup.h  SuRun.dsp  SuRun.dsw  SuRunVC9.sln  SuRunVC9.vcproj  SuRunVC9.vcxproj  SuRunVer.h  SuRunVer.rc2  TODO.md  TrayMsgWnd.cpp  (+36 more)
.github/workflows/: automatic-release.yml  build.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
InstallSuRun/: CMakeLists.txt  CMakePresets.json  InstSuRunVer.rc2  InstallSuRun.cpp  InstallSuRun.dsp  InstallSuRun.mak  InstallSuRun.rc  InstallSuRun.vcproj  InstallSuRunVC9.vcxproj  Makefile  error_mingw.txt
PC/: .editorconfig  InstallSuRunVC9.vcxproj  InstallSuRunVC9.vcxproj.filters  SuRunC.vcxproj  SuRunC.vcxproj.filters  SuRunExtVC9.vcxproj  SuRunExtVC9.vcxproj.filters  SuRunVC9.sln  SuRunVC9.vcxproj  SuRunVC9.vcxproj.filters
Sample-Test1/: Sample-Test1.vcxproj
SuRun/: BuildSuRun.cmd  CmdLine.h  DBGTrace.H  DynWTSAPI.cpp  Helpers.h  LSALogon.cpp  LSALogon.h  LogonDlg.cpp  LogonDlg.h  ReqAdmin.cpp  ResStr.h  Service.cpp  Setup.cpp  Setup.h  SuRun.dep  SuRun.mak  SuRun.rc  SuRun.sln  SuRun.vcproj  SuRunVC9.sln  SuRunVC9.vcxproj  SuRunVC9.vcxproj.filters  SuRunVer.h  SuRunVer.rc2  TrayMsgWnd.cpp  TrayMsgWnd.h  WatchDog.cpp  WinStaDesk.cpp  gpedit.txt  lsa_laar.h  pugxml.h  resource.h  sspi_auth.h
SuRun/InstallSuRun/: InstSuRunVer.rc2  InstallSuRun.cpp  InstallSuRun.dep  InstallSuRun.rc  InstallSuRunVC9.vcproj  InstallSuRunVC9.vcxproj  InstallSuRunVC9.vcxproj.filters  app.manifest
SuRun/SuRunExt/: IATHook.cpp  SuRunExt.dep  SuRunExt.dsp  SuRunExt.mak  SuRunExt.vcproj  SuRunExtVC9.vcproj  SuRunExtVC9.vcxproj  SuRunExtVer.rc2  SuRunext.h  SysMenuHook.cpp  SysMenuHook.h
SuRunC/: SuRunC.cpp  SuRunC.dsp  SuRunC.rc  SuRunC.vcproj  SuRunC.vcxproj.filters  resource.h
SuRunExt/: CMakeLists.txt  IATHook.cpp  SuRunExt.Def  SuRunExt32.Def  SuRunExtVer.rc2  SuRunext.cpp  SuRunext.h  SuRunext.rc  SysMenuHook.cpp  SysMenuHook.h  header.h  mingw.def  resource.h
TestScreenshot/: TestScreenshot.cpp  TestScreenshot.vcxproj  TestScreenshot.vcxproj.filters
TestScreenshotSuRun/: Header.h  TestScreenshotSuRun.vcxproj
c_link_go/: CMakeLists.txt  CMakePresets.json  Makefile  main.c
cgotests/: main.go  main2.go
cmake/: CMakeLists.txt  CMakePresets.json
cplapplet/: CMakeLists.txt  Makefile  app.def  app.rc  main.c  resource.h
cpp/: DBGTrace.H  DynWTSAPI.h  Helpers.h  IsAdmin.cpp  IsAdmin.h  LogonDlg.cpp  ResStr.h  ScreenSnap.h  Setup.h  SuRunVer.h  TrayMsgWnd.h  UserGroups.cpp  UserGroups.h  lsa_laar.cpp  lsa_laar.h  main.cpp  main.h  pugxml.h  resource.h  sspi_auth.cpp  sspi_auth.h
docs/: CHANGELOG.md  decisions.md  hugo.yaml  manifest_files.ipynb  original_readme.md  subtree.md  vcxproj_files.ipynb
go_surun/: binding.go  main.go
go_tools/sufilecopy/: abcheck.go  main.go  service_install.go  service_manage.go
go_tools/visual-vcx/: go.sum  model.go
go_windll/: main.go
godylib/: DOC.md  Makefile  checkdll.py  echoarg.ps1  env_make.py  lib.go  lib.h  mingw32.ps1  msys.ps1  msys.py  test_array_slice.ps1
goscreenshot/: blur.go  screenshot.go
install_surun/: CMakeLists.txt  CMakePresets.json  Doc.md  InstSuRunVer.rc2  InstallSuRun.rc  InstallSuRunVC9.vcxproj
layouts/partials/: head.html
pytests/: parse_data.py  test_unpack.py
reg/: control.ps1  setting.ps1
res/: NoAdmin.kra  NoWindow.ico.kra  app.manifest  icon_meanings.md  taskbar_icon.py
scripts/: build.ps1  msys.ps1
src/PC/: .gitignore  InstallSuRun.vcxproj  SuRun.sln  SuRun.vcxproj  SuRun.vcxproj.filters  SuRunExt.vcxproj  SuRunVC9.vcxproj
src/install_surun/: Doc.md  InstallSuRun.cpp  InstallSuRun.rc  Makefile  error_mingw.txt  resource.h
src/resources/: Admin.kra  NoAdmin.kra  SrAdmin.ico.kra
src/surun/: BlurredScreen.h  DBGTrace.H  DBGTrace.cpp  DynWTSAPI.cpp  Helpers.cpp  Helpers.h  IsAdmin.cpp  IsAdmin.h  LSALogon.cpp  LogonDlg.cpp  LogonDlg.h  ReqAdmin.cpp  ResStr.h  ScreenSnap.h  Service.cpp  Service.h  Setup.cpp  Setup.h  SuRunVer.h  TrayMsgWnd.cpp  TrayMsgWnd.h  TrayShowAdmin.cpp  UserGroups.cpp  UserGroups.h  WatchDog.cpp  WatchDog.h  WinStaDesk.cpp  WinStaDesk.h  anchor.h  app.manifest  launcher.cpp  lsa_laar.cpp  lsa_laar.h  main.cpp  pugxml.h  resource.h  sspi_auth.cpp
src/surun_ext/: IATHook.cpp  IATHook.h  SuRunExtVer.rc2  SuRunext.cpp  SuRunext.h  SysMenuHook.cpp  SysMenuHook.h
stools/: clean_vcproj.ipynb  gen_lsp_tdm.py  pipe_server.py  run_format.py
sufilecopy/: abcheck.go  api_version.go  beep.go  default.go  filecopy.go  go.mod  install.go  main.go  manage.go  path.go  port_query.go  query.go  rpc.go  server.go  service.go  service_install.go  service_manage.go  service_run.go  svc.go
surun/: CmdLine.h  DBGTrace.cpp  LSALogon.cpp  LSALogon.h  LogonDlg.h  ReqAdmin.h  ScreenSnap.h  Service.cpp  Service.h  SuRun.rc  TrayMsgWnd.cpp  TrayShowAdmin.cpp  TrayShowAdmin.h  WatchDog.cpp  WinStaDesk.cpp  WinStaDesk.h  anchor.h  launcher.cpp  main.cpp
surun_com/: SuRunC.rc
surun_ext/: CMakeLists.txt  IATHook.cpp  SuRunExtVer.rc2  SuRunext.cpp  SuRunext.rc  SysMenuHook.cpp  SysMenuHook.h
surun_tools/: .gitignore  __main__.py  build.py  clean.py  clean_vcproj.ipynb  cleanup_build.ipynb  glob1.py  insert_goignore.py  install.py  merge_cc.py  pipe_client.py  run_format.py
tests/: .gitignore
tests/TestScreenshot/: TestScreenshot.cpp  TestScreenshot.vcxproj  app.manifest
tests/TestScreenshotSuRun/: Header.h  TestScreenshotSuRun.vcxproj  main.cpp
tests/b64_test/: main.py
tests/c_link_go/: CMakeLists.txt  CMakePresets.json  Makefile  main.c
tests/cgotests/: main2.go
tests/godylib/: DOC.md  Makefile  checkdll.py  echoarg.ps1  env_make.py  go.mod  lib.go  test_array_slice.ps1
visual-vcx/: go.mod  main.go  model.go  parser.go
www/: hugo.yaml
(+44 files in other folders)
