[project]
name = "soda-surun"
version = "2025.5.1.1"
description = "surun and related tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clang-format>=20.1.3",
    "soda-hugo-nbconvert>=2025.5.7.3",
    "sodatools>=2025.2.16.0",
]

[project.urls]
Repository = "https://github.com/soda92/surun"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["surun_tools"]
exclude = ["__pycache__", "*.pyc", "*.exe"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["surun_tools"]
exclude = ["__pycache__", "*.pyc"]

[dependency-groups]
dev = ["hatchling>=1.27.0", "jupyter>=1.1.1", "pytest>=8.3.5"]

[tool.hatch.build.hooks.custom]

[project.scripts]
surun_install = "surun_tools.install:main2"
surun_format = "surun_tools.run_format:surun_format"
